--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
-  workflow_dispatch:  # Pozwala uruchomić ręcznie
+  workflow_dispatch:
 
 jobs:
   build:
@@ -20,16 +20,15 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: gradle
     
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
     
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
     
     - name: Build Debug APK
-      run: ./gradlew assembleDebug
+      run: gradle assembleDebug
     
     - name: Upload APK
       uses: actions/upload-artifact@v4
